--- a/src/modules/banking/components/QuantityLabel.module.css
+++ b/src/modules/banking/components/QuantityLabel.module.css
@@ -2,5 +2,5 @@
     display: flex;
     padding-top: var(--flx-spacing-tiny);
     padding-bottom: var(--flx-spacing-tiny);
-    padding-right: var(--flx-spacing-x-tiny);
+    padding-right: var(--flx-spacing-tiny);
   }
